--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-calendars": "^1.1266.0",
     "react-native-elements": "^3.4.2",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
